--- a/style.css
+++ b/style.css
@@ -1,1 +1,114 @@
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
 
+.grid-home {
+    margin-left: 200px;
+    display: grid;
+    grid-template-columns: 1 fr; /* Creates three equal columns */
+    grid-gap: 10px;
+}
+.grid-home .welcome {
+    grid-column: span 1;
+    font-size: 2em;
+    text-align: left;
+}
+
+.grid-home .homeheader {
+    grid-column: span 1;
+    text-align: left;
+}
+
+.grid-home .hometext {
+    grid-column: span 1;
+    font-size: 1em;
+    text-align: justify;
+}
+
+.header {
+    position: sticky;
+    top: 0;
+    max-width: 100%;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    background: #555;
+    color: #f1f1f1;
+}
+  
+  
+.navigation {
+    width: 150px;
+    height: 100vh; 
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-top: 20px;
+    overflow: hidden;
+    z-index: 2;
+}
+  
+ 
+.navigation a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    transition: background-color 0.3s ease;
+}
+  
+.navigation a:hover {
+    background-color: #ddd;
+    color: black;
+}
+  
+  
+.navmenu {
+    cursor: pointer;
+    font-weight: bold;
+    background-color: #444;
+    padding: 14px;
+    text-align: center;
+    display: block;
+}
+
+.dropdown {
+    display: none;
+}
+  
+.navcontent {
+    display: none;
+    background-color: #333;
+    border-left: 4px solid #444;
+}
+  
+.navcontent a {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    color: white;
+}
+  
+.nav-\content a:hover {
+    background-color: #ddd;
+    color: black;
+}
+  
+.navigation:hover .dropdown {
+    display: block;
+}
+  
+.navigation:hover .dropdown .navcontent {
+    display: block;
+}
+
+.title {
+    color: black;
+    text-align: center;
+}
