--- a/style.css
+++ b/style.css
@@ -2,75 +2,145 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    color: white;
   }
 
-.info {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+.intro {
+    margin: 5%;
+    padding-top: 2%;
+    padding-bottom: 3%;
+    border-style: solid;
+    border-width: 5px;
+    border-color: black;
+    background-color: midnightblue;
 }
 
+
+.infogrid {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-right: 10%;
+    margin-left: 10%;
+    padding-right: 5%;
+}
+
+
 .info1 {
-  grid-template-columns:1 ;
+    grid-template-columns:1 ;
+    margin-right: 5%;
 }
 
 .info2 {
-  grid-template-columns: 2;
+    grid-template-columns: 2;
 }
 .grid-home {
-    margin-left: 200px;
+    margin-left: 150px;
     display: grid;
     grid-template-columns: 1 fr; 
-    grid-gap: 10px;
 }
-.grid-home .welcome {
-    grid-column: span 1;
+
+.welcome {
+    grid-column: 1;
     font-size: 2em;
+    text-align: center;
+    margin: 3px;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 10px;
+    border-style: solid;
+    border-width: 5px;
+    border-color: black;
+    background-color: cornflowerblue;
+}
+
+.homeheader {
+    margin-right: 8%;
+    margin-left: 8%;
+    grid-column: 1;
     text-align: left;
 }
 
-.grid-home .homeheader {
-    grid-column: span 1;
-    text-align: left;
-}
-
-.grid-home .hometext {
-    grid-column: span 1;
+.hometext {
+    margin-right: 10%;
+    margin-left: 10%;
+    grid-column: 1;
     font-size: 1em;
     text-align: justify;
+}
+
+.homelink {
+    margin-right: 10%;
+    margin-left: 10%;
+    grid-column: 1;
+    font-size: 1em;
+    text-align: justify;
+    color: cornflowerblue;
+}
+
+.homelink:hover {
+  color: red; 
 }
 
 .header {
     position: sticky;
     top: 0;
     max-width: 100%;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 180px;
+    margin-right: 20px;
+    margin-top: 0;
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
-    background: #555;
+    background: midnightblue;
     color: #f1f1f1;
+    border-style: solid;
+    border-width: 5px;
+    border-color: black;
 }
-  
-  
+
+.footer {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+    z-index: 2;
+    margin-left: 150px;
+    padding: 3%;
+    
+}  
+
+footer{
+    margin: 2px;
+    padding: 10px;
+}
+
+.footerlink {
+    margin: 2px;
+    padding: 10px;
+    color: cornflowerblue;
+}
+
+.footerlink:hover {
+  color: red; 
+}
+
 .navigation {
+    position: fixed;
     width: 150px;
     height: 100vh; 
-    background-color: #333;
-    position: fixed;
+    background-color: midnightblue;
     top: 0;
     left: 0;
     padding-top: 20px;
     overflow: hidden;
-    z-index: 2;
+    z-index: 1;
 }
   
  
 .navigation a {
+    display: block;
     color: white;
     padding: 14px 16px;
     text-decoration: none;
-    display: block;
     text-align: left;
     transition: background-color 0.3s ease;
 }
@@ -84,7 +154,7 @@ body {
 .navmenu {
     cursor: pointer;
     font-weight: bold;
-    background-color: #444;
+    background-color: cornflowerblue;
     padding: 14px;
     text-align: center;
     display: block;
@@ -96,8 +166,8 @@ body {
   
 .navcontent {
     display: none;
-    background-color: #333;
-    border-left: 4px solid #444;
+    background-color: #2f2e2e;
+    border-left: 4px solid #464545;
 }
   
 .navcontent a {
@@ -107,7 +177,7 @@ body {
     color: white;
 }
   
-.nav-\content a:hover {
+.navcontent a:hover {
     background-color: #ddd;
     color: black;
 }
