--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ body {
  }
 
 .intro {
-    margin: 5%;
-    margin-bottom: 25%;
+    margin: 3%;
     padding-top: 2%;
     padding-bottom: 3%;
     border-style: solid;
@@ -23,6 +22,16 @@ body {
     background-color: midnightblue;
 }
 
+.syllabus {
+    margin: 3%;
+    margin-bottom: 25%;
+    padding-top: 2%;
+    padding-bottom: 3%;
+    border-style: solid;
+    border-width: 5px;
+    border-color: black;
+    background-color: midnightblue;
+}
 .infogrid {
     display: grid;
     grid-template-columns: 1fr 2fr;
