--- a/style.css
+++ b/style.css
@@ -21,7 +21,11 @@ body {
     border-color: black;
     background-color: midnightblue;
 }
+.piazza{
+  width: 100%;
+  min-height: 600px;
 
+}
 .syllabus {
     margin: 3%;
     margin-bottom: 25%;
@@ -102,7 +106,7 @@ body {
     position: sticky;
     top: 0;
     max-width: 100%;
-    max-height: 20%;
+    max-height: 40%;
     margin-left: 180px;
     margin-right: 20px;
     margin-top: 0;
