--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,7 @@ body {
 }
 
 .nav-content a {
-  padding: 14px 20px;
+  padding: 8px 20px;
   text-decoration: none;
   color: var(--text-white);
   display: block;
@@ -251,7 +251,7 @@ footer {
 
 .grid-assignment {
   display: grid;
-  grid-template-columns: 2% 10% 10% 10% 53% 5%;
+  grid-template-columns: 4% 10% 10% auto 53% auto;
   gap: 1px;
   margin: 3%;
   background-color: cornflowerblue;
