--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,10 @@
   }
 }
 
+.minheight {
+  min-height: 100vh;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -39,6 +43,18 @@ body {
   display: flex;
   flex-direction: column;
   line-height: 1.6;
+}
+
+.image {
+  display: block;
+  margin: auto;
+  margin-top: 3%;
+  width: 70%;
+  height: auto;
+}
+
+ul.list {
+  list-style-type: circle;
 }
 
 .margin {
