--- a/src/style.css
+++ b/src/style.css
@@ -155,6 +155,14 @@ ul.list {
   margin: 0 auto;
 }
 
+.piazza {
+    min-width: 100%;
+    height: 100vh;
+}
+
+.indent{
+  padding-left: 30px;
+}
 .welcome {
   font-size: 2.2em;
   text-align: center;
@@ -192,6 +200,14 @@ ul.list {
   margin: 0 0 15px 0;
   text-align: left;
   font-size: 1.5em;
+  color: var(--welcome-bg);
+  font-weight: 600;
+}
+
+.homeheader2 {
+  margin: 0 0 0 0;
+  text-align: left;
+  font-size: 1.2em;
   color: var(--welcome-bg);
   font-weight: 600;
 }
