--- a/src/style.css
+++ b/src/style.css
@@ -177,9 +177,26 @@ ul.list {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 10px;
+}
+
+.button {
+  float: right;
+}
+
 .welcome:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+
+.coursetext {
+  margin: 0 0 2px 0;
+  font-size: 1em;
+  text-align: justify;
+  font-weight: 300;
 }
 
 .intro {
@@ -205,7 +222,7 @@ ul.list {
 }
 
 .homeheader2 {
-  margin: 0 0 0 0;
+  margin: 0 0 5px 0;
   text-align: left;
   font-size: 1.2em;
   color: var(--welcome-bg);
