--- a/src/style.css
+++ b/src/style.css
@@ -176,13 +176,36 @@ ul.list {
 }
 
 textarea {
-  width: 100%;
-  height: 150px;
-  padding: 10px;
+  font-family: 'Poppins', sans-serif; 
+  font-size: 1em; 
+  display: block; 
+  padding: 10px; 
+  width: 100%; 
+  height: 300px; 
+  border-width: 2px;
+  border-style: solid; 
+  border-color: black;
+  border-radius: 25px; 
+  box-sizing: border-box; 
 }
 
 .button {
-  float: right;
+  font-family: 'Poppins', sans-serif; 
+  font-size: 1em; 
+  display: block; 
+  margin-left:  auto; 
+  margin-right: auto;
+  padding: 10px; 
+  background-color: #2a5298; 
+  color: white; 
+  border: none; 
+  border-radius: 5px; 
+  cursor: pointer; 
+  transition: background-color 0.3s ease; 
+}
+
+.button:hover {
+  background-color: #6f9be8; 
 }
 
 .welcome:hover {
@@ -427,5 +450,7 @@ footer {
     font-size: 1.3em;
   }
 }
+
+
 
 
